--- a/com.itpl/pom.xml
+++ b/com.itpl/pom.xml
@@ -3,6 +3,13 @@
   <groupId>ITPL</groupId>
   <artifactId>com.itpl</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+	</properties>
+	
   <dependencies>
   
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -33,6 +40,6 @@
     <artifactId>poi</artifactId>
     <version>4.1.2</version>
 </dependency>
-  
+
   </dependencies>
 </project>
