--- a/RestAssured/pom.xml
+++ b/RestAssured/pom.xml
@@ -62,6 +62,12 @@
     <version>2.15.2</version>
 </dependency>
 
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>4.5.1</version>
+</dependency>
+
 
   </dependencies>
 </project>
